# job-board-backend-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/core/: models.py
apps/jobs/: models.py  tasks.py
apps/jobs/api/: serializers.py  urls.py  views.py
apps/jobs/migrations/: 0001_initial.py  0002_job_job_type.py
apps/users/: admin.py  managers.py  models.py  permissions.py
apps/users/api/: serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: conftest.py  test_auth.py
config/: celery.py  settings.py  urls.py
